# pg2-project

./: README.md  cookiecutter.json  manifest.json  pyproject.toml
data/: outputs.json
hooks/: post_gen_project.sh
src/{{cookiecutter.package_name}}/: method.py
{{cookiecutter.project_slug}}/: .env  Dockerfile  README.md  docker-compose.yaml  manifest.json  pyproject.toml  run.py
{{cookiecutter.project_slug}}/data/: sample.csv
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: method.py
