[project]
name = "{{ cookiecutter.package_name.lower.replace(' ','_') }}"
version = "{{ cookiecutter.project_version }}"
description = {{ cookiecutter.description|tojson }}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
